--- a/index.html
+++ b/index.html
@@ -5,20 +5,46 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="assets/favicon-32x32.png" type="image/x-icon">
+        <link rel="shortcut icon" href="assets/images/icon.png" type="image/x-icon">
         <link rel="stylesheet" href="css/styles.css">
         <title>Frontend Mentor | QR code component</title>
     </head>
 
     <body>
-        Improve your front-end skills by building projects
 
-        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+        <main class="main">
+
+            <section class="content">
+
+                <section class="content__container container">
+
+                    <article class="content__card">
+                        <img src="assets/images/qr_code.png" loading="eager" alt="Código QR" class="card__img">
+
+                        <p class="card__title">Improve your front-end skills by building projects</p>
         
-        <div class="credits">
-          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-          Coded by <a href="#">Gerardo Martínez</a>.
-        </div>
+                        <p class="card__action">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+                    </article>
+
+                </section>
+
+            </section>
+
+        </main>
+
+        <footer class="footer">
+
+            <section class="footer__container container">
+
+                <div class="footer__credits">
+                    <p class="footer__description">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="footer__link">Frontend Mentor</a>. 
+                    <br>Coded by <a href="#" class="footer__link">Gerardo Martínez</a>.</p>
+                </div>
+
+            </section>
+
+        </footer>
+
     </body>
 
 </html>
