Solución margin top collapse

--- a/index.html
+++ b/index.html
@@ -34,13 +34,17 @@
 
         <footer class="footer">
 
-            <section class="footer__container container">
+            <section class="main">
 
-                <div class="footer__credits">
-                    <p class="footer__description">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="footer__link">Frontend Mentor</a>. 
-                    <br>Coded by <a href="#" class="footer__link">Gerardo Martínez</a>.</p>
-                </div>
+                <section class="footer__container container">
 
+                    <div class="footer__credits">
+                        <p class="footer__description">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="footer__link">Frontend Mentor</a>. 
+                        <br>Coded by <a href="#" class="footer__link">Gerardo Martínez</a>.</p>
+                    </div>
+    
+                </section>
+                
             </section>
 
         </footer>
